@@ -42,6 +42,8 @@ Bug fixes from 1.3.2
 
 Enhancements from 1.3.2
 -----------------------
+- FileUtils
+  - Add a deleteQuietly method [IO-135]
 
 - TeeInputStream [IO-129]
   - Add new Tee input stream implementation
